--- a/src/main/center/index.css
+++ b/src/main/center/index.css
@@ -11,6 +11,19 @@
   height: 600px;
   border-radius: 50% !important;
   border: rgb(235, 229, 217) solid 3px;
+  z-index: 1;
+  transition: all .8s;
+}
+.circleOn{
+  box-sizing: border-box;
+  margin-top: 8%;
+  width: 34%;
+  height: 600px;
+  border-radius: 50% !important;
+  border: rgb(235, 229, 217) solid 3px;
+  margin-right: 1100px;
+  z-index: 1;
+  transition: all .8s;
 }
 .clockClass {
   display: flex;
