--- a/src/main/backGround/index.css
+++ b/src/main/backGround/index.css
@@ -15,4 +15,37 @@
   right: -300px;
   top: 25%;
   border-radius: 50% !important;
+  transition: all 0.8s;
+}
+.backGroundChangeRight {
+  width: 830px;
+  height: 95%;
+  background-color: #c72f39;
+  position: fixed;
+  right: -300px;
+  top: 2%;
+  border-radius: 50% 10% 10% 50%;
+  z-index: 0;
+  transition: all 0.8s;
+}
+.menuBox {
+  position: fixed;
+  top: 21%;
+  right: 2%;
+  width: 350px;
+  height: 550px;
+  background-color: #c72f39;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.menuTitleBox {
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(234, 245, 137);
+  border-radius: 18px;
+  padding: 0 15px;
+  position: relative;
+  border: 0;
+  outline: none;
 }
