--- a/src/main/backGround/index.css
+++ b/src/main/backGround/index.css
@@ -49,3 +49,12 @@
   border: 0;
   outline: none;
 }
+.menuMainBox{
+  box-sizing: border-box;
+  margin-top: 15px;
+  width: 100%;
+  height: 450px;
+  background-color: #bc2b35;
+  border-radius: 18px;
+  overflow: hidden;
+}
